@@ -1,3 +1,8 @@
+2006-05-15 Paul Jakma <paul.jakma@sun.com>
+
+	* zserv.c: (general) Remove the private zebra_command_str
+	  in favour of newly added libzebra zserv_command_string.
+
 2006-05-11 Paul Jakma <paul.jakma@sun.com>
 
 	* interface.c: (if_delete_update) route_node_lookup may return
